--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -41,7 +41,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/auth_form"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             app:layout_constraintStart_toStartOf="parent"
@@ -78,7 +78,7 @@
         <RelativeLayout
                 android:id="@+id/login_field"
                 android:elevation="10dp"
-                android:layout_width="358dp"
+                android:layout_width="0dp"
                 android:layout_height="50dp"
                 android:background="@drawable/field_background"
                 android:layout_centerHorizontal="true"
@@ -87,8 +87,8 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/separator"
                 android:layout_marginTop="28dp"
-                android:layout_marginEnd="32dp"
-                android:layout_marginStart="32dp"
+                android:layout_marginEnd="35dp"
+                android:layout_marginStart="35dp"
                 android:backgroundTint="#F2E2E2E2">
 
             <EditText
@@ -104,7 +104,8 @@
                     android:background="@null"
                     android:layout_alignParentEnd="true"
                     android:layout_marginEnd="10dp"
-                    android:inputType="text|textNoSuggestions" />
+                    android:inputType="text|textNoSuggestions"
+                    android:maxLength="50" />
 
             <ImageView
                     android:id="@+id/login_icon"
@@ -119,7 +120,7 @@
         <RelativeLayout
                 android:id="@+id/password_field"
                 android:elevation="10dp"
-                android:layout_width="358dp"
+                android:layout_width="0dp"
                 android:layout_height="50dp"
                 android:background="@drawable/field_background"
                 android:layout_marginTop="20dp"
@@ -128,8 +129,8 @@
                 app:layout_constraintTop_toBottomOf="@id/login_field"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginStart="32dp"
-                android:layout_marginEnd="32dp"
+                android:layout_marginStart="35dp"
+                android:layout_marginEnd="35dp"
                 android:backgroundTint="#F2E2E2E2">
 
             <EditText
@@ -145,7 +146,8 @@
                     android:background="@null"
                     android:layout_alignParentEnd="true"
                     android:layout_marginEnd="10dp"
-                    android:inputType="text|textPassword" />
+                    android:inputType="text|textPassword"
+                    android:maxLength="50" />
 
             <ImageView
                     android:id="@+id/password_icon"
@@ -160,8 +162,8 @@
 
         <Button
                 android:id="@+id/login_button"
-                android:layout_width="200dp"
-                android:layout_height="48dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_marginTop="30dp"
                 android:text="@string/login_button"
                 android:textAppearance="@style/login_button"
@@ -174,7 +176,13 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
-                android:layout_marginBottom="8dp" />
+                android:layout_marginBottom="8dp"
+                android:paddingHorizontal="36dp"
+                android:paddingVertical="5dp"
+                android:autoSizeTextType="uniform"
+                android:minHeight="30dp"
+                android:textAlignment="center"
+                tools:ignore="TouchTargetSizeCheck" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
