--- a/app/src/main/res/layout/create_team_dialog.xml
+++ b/app/src/main/res/layout/create_team_dialog.xml
@@ -36,7 +36,7 @@
 
             <TextView
                     android:id="@+id/delete_desc"
-                    android:layout_width="match_parent"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:text="@string/create_team_desc"
                     android:textAppearance="@style/dialog_desc"
@@ -52,7 +52,7 @@
 
             <TextView
                     android:id="@+id/added_members"
-                    android:layout_width="match_parent"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:text="@string/added_members_desc"
                     android:textAppearance="@style/dialog_desc"
@@ -63,12 +63,12 @@
                     android:layout_marginTop="20dp"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    android:layout_marginEnd="24dp"
-                    android:layout_marginStart="24dp" />
+                    android:layout_marginEnd="25dp"
+                    android:layout_marginStart="25dp" />
 
             <TextView
                     android:id="@+id/find_desc"
-                    android:layout_width="match_parent"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:text="@string/add_member_desc"
                     android:textAppearance="@style/dialog_desc"
@@ -78,13 +78,13 @@
                     app:layout_constraintTop_toBottomOf="@+id/addedMembers"
                     android:layout_marginTop="25dp"
                     app:layout_constraintStart_toStartOf="parent"
-                    android:layout_marginStart="24dp"
+                    android:layout_marginStart="25dp"
                     app:layout_constraintEnd_toEndOf="parent"
-                    android:layout_marginEnd="24dp" />
+                    android:layout_marginEnd="25dp" />
 
             <TextView
                     android:id="@+id/create_text"
-                    android:layout_width="match_parent"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:text="@string/create_team_text"
                     android:textAppearance="@style/reload_text"
@@ -100,7 +100,7 @@
 
             <ImageView
                     android:id="@+id/separator"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:src="@drawable/separator"
                     android:contentDescription="@string/separator"
@@ -154,7 +154,7 @@
 
             <Button
                     android:id="@+id/btnSearch"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:background="@drawable/blue_button_background"
                     android:textAppearance="@style/pick_button"
@@ -198,12 +198,11 @@
                     android:minHeight="35dip"
                     android:enabled="false"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    android:gravity="center_horizontal"
                     app:layout_constraintVertical_bias="1.0" />
 
             <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/addedMembers"
-                    android:layout_width="match_parent"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     app:layout_constraintTop_toBottomOf="@+id/added_members"
                     android:layout_marginTop="15dp"
@@ -215,7 +214,7 @@
 
             <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/searchUsers"
-                    android:layout_width="match_parent"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     app:layout_constraintTop_toBottomOf="@id/btnSearch"
                     android:layout_marginTop="15dp"
@@ -228,7 +227,7 @@
             <TextView
                     android:id="@+id/error_text"
                     android:text="@string/error_team_message"
-                    android:layout_width="match_parent"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:textAppearance="@style/error_team_message"
                     android:textAlignment="textStart"
@@ -243,7 +242,7 @@
             <TextView
                     android:id="@+id/empty_search_text"
                     android:text="@string/empty_search_message"
-                    android:layout_width="match_parent"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:textAppearance="@style/empty_search_message"
                     android:textAlignment="center"
