--- a/app/src/main/res/layout/delete_dialog.xml
+++ b/app/src/main/res/layout/delete_dialog.xml
@@ -21,7 +21,7 @@
 
     <TextView
             android:id="@+id/delete_text"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="@string/delete_text"
             android:textAppearance="@style/reload_text"
@@ -37,23 +37,23 @@
 
     <TextView
             android:id="@+id/delete_desc"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="@string/delete_photo_desc"
             android:textAppearance="@style/dialog_desc"
-            android:textAlignment="center"
+            android:textAlignment="viewStart"
             android:fontFamily="@font/montserrat_medium"
             android:autoSizeTextType="uniform"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/separator"
-            android:layout_marginTop="30dp"
-            android:layout_marginStart="20dp"
-            android:layout_marginEnd="20dp" />
+            android:layout_marginTop="20dp"
+            android:layout_marginStart="25dp"
+            android:layout_marginEnd="25dp" />
 
     <ImageView
             android:id="@+id/separator"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:src="@drawable/separator"
             android:contentDescription="@string/separator"
