--- a/app/src/main/res/layout/crop_photo_dialog.xml
+++ b/app/src/main/res/layout/crop_photo_dialog.xml
@@ -21,7 +21,7 @@
 
     <TextView
             android:id="@+id/crop_text"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="@string/crop_text"
             android:textAppearance="@style/reload_text"
@@ -37,7 +37,7 @@
 
     <TextView
             android:id="@+id/crop_desc"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="@string/crop_desc"
             android:textAppearance="@style/dialog_desc"
@@ -53,7 +53,7 @@
 
     <ImageView
             android:id="@+id/separator"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:src="@drawable/separator"
             android:contentDescription="@string/separator"
