--- a/app/src/main/res/layout/edit_user_dialog.xml
+++ b/app/src/main/res/layout/edit_user_dialog.xml
@@ -21,7 +21,7 @@
 
     <TextView
             android:id="@+id/create_text"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="@string/edit_text"
             android:textAppearance="@style/reload_text"
@@ -37,7 +37,7 @@
 
     <ImageView
             android:id="@+id/separator"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:src="@drawable/separator"
             android:contentDescription="@string/separator"
@@ -137,8 +137,8 @@
 
     <Button
             android:id="@+id/submit"
-            android:layout_width="0dp"
-            android:layout_height="45dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:background="@drawable/login_button"
             style="@style/orange_button_style"
             android:textAppearance="@style/reload_button"
@@ -148,28 +148,31 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="8dp"
-            android:paddingHorizontal="30dp"
+            android:layout_marginBottom="22dp"
+            android:paddingHorizontal="36dp"
             android:paddingVertical="5dp"
             tools:ignore="TouchTargetSizeCheck"
             app:layout_constraintTop_toBottomOf="@+id/vk"
             android:layout_marginTop="20dp"
-            android:layout_marginStart="100dp"
-            android:layout_marginEnd="100dp"
+            android:layout_marginStart="40dp"
+            android:layout_marginEnd="40dp"
             android:autoSizeTextType="uniform"
-            android:maxWidth="32dp" />
+            app:layout_constraintVertical_bias="0.0"
+            android:minHeight="45dip" />
 
     <TextView
             android:id="@+id/error_text"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:textAppearance="@style/error_message"
             android:textAlignment="center"
             android:layout_marginTop="12dp"
             app:layout_constraintTop_toBottomOf="@+id/vk"
             app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
             app:layout_constraintEnd_toEndOf="parent"
-            android:visibility="invisible"
+            android:visibility="gone"
             app:layout_constraintBottom_toTopOf="@id/submit"
             android:layout_marginBottom="12dp" />
 
