--- a/app/src/main/res/layout/fragment_teams.xml
+++ b/app/src/main/res/layout/fragment_teams.xml
@@ -63,7 +63,7 @@
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                         android:id="@+id/toggleGroup"
-                        android:layout_width="wrap_content"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:background="@drawable/switch_background"
                         android:orientation="horizontal"
@@ -74,8 +74,7 @@
                         android:layout_marginTop="25dp"
                         android:layout_marginStart="25dp"
                         android:layout_marginEnd="25dp"
-                        android:maxWidth="350dp"
-                        android:minWidth="200dp">
+                        app:layout_constraintWidth_max="wrap">
 
                     <ToggleButton
                             android:id="@+id/manager_button"
@@ -92,7 +91,9 @@
                             app:layout_constraintEnd_toStartOf="@+id/member_button"
                             android:layout_marginEnd="-10dp"
                             app:layout_constraintTop_toTopOf="parent"
-                            app:layout_constraintBottom_toBottomOf="parent" />
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            android:visibility="visible"
+                            app:layout_constraintStart_toStartOf="parent" />
 
                     <ToggleButton
                             android:id="@+id/member_button"
@@ -109,12 +110,14 @@
                             app:layout_constraintStart_toEndOf="@id/manager_button"
                             android:layout_marginStart="-20dp"
                             app:layout_constraintTop_toTopOf="parent"
-                            app:layout_constraintBottom_toBottomOf="parent" />
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            android:visibility="visible"
+                            app:layout_constraintEnd_toEndOf="parent" />
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
                 <TextView
                         android:id="@+id/empty_text"
-                        android:layout_width="match_parent"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:textColor="@color/light_gray"
                         android:textAppearance="@style/error_message"
@@ -122,11 +125,15 @@
                         android:text="@string/empty_text"
                         app:layout_constraintTop_toBottomOf="@+id/toggleGroup"
                         android:layout_marginTop="40dp"
-                        android:visibility="gone" />
+                        android:visibility="gone"
+                        app:layout_constraintStart_toStartOf="parent"
+                        android:layout_marginStart="20dp"
+                        android:layout_marginEnd="20dp"
+                        app:layout_constraintEnd_toEndOf="parent" />
 
                 <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/recyclerView"
-                        android:layout_width="match_parent"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         app:layout_constraintTop_toBottomOf="@+id/toggleGroup"
                         app:layout_constraintStart_toStartOf="parent"
@@ -134,35 +141,35 @@
                         android:nestedScrollingEnabled="false"
                         android:paddingBottom="30dp" />
             </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                    android:clickable="true"
+                    android:focusable="true"
+                    android:focusableInTouchMode="true"
+                    android:background="@drawable/scrollview_background"
+                    android:animateLayoutChanges="true"
+                    android:visibility="gone"
+                    android:id="@+id/progressLayout"
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="@id/scroll_container"
+                    app:layout_constraintBottom_toBottomOf="parent">
+
+                <ProgressBar
+                        style="?android:attr/progressBarStyle"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:indeterminate="true"
+                        android:indeterminateTintMode="src_atop"
+                        android:indeterminateTint="@color/blue"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.core.widget.NestedScrollView>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-            android:clickable="true"
-            android:focusable="true"
-            android:focusableInTouchMode="true"
-            android:background="@drawable/scrollview_background"
-            android:animateLayoutChanges="true"
-            android:visibility="gone"
-            android:id="@+id/progressLayout"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/scrollView"
-            android:layout_marginTop="115dp">
-
-        <ProgressBar
-                style="?android:attr/progressBarStyle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:indeterminate="true"
-                android:indeterminateTintMode="src_atop"
-                android:indeterminateTint="@color/blue"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
