--- a/app/src/main/res/layout/item_carousel.xml
+++ b/app/src/main/res/layout/item_carousel.xml
@@ -6,14 +6,17 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="35dp">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <LinearLayout
             android:id="@+id/teamLayout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent">
+            app:layout_constraintEnd_toEndOf="parent"
+            android:gravity="center"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp">
 
         <TextView
                 android:id="@+id/teamName"
@@ -51,7 +54,7 @@
                 app:layout_constraintTop_toTopOf="@+id/editTeam"
                 app:layout_constraintBottom_toBottomOf="@+id/editTeam"
                 android:visibility="gone" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    </LinearLayout>
 
     <androidx.viewpager2.widget.ViewPager2
             android:id="@+id/imagePager"
@@ -63,51 +66,54 @@
             android:layout_marginTop="20dp"
             android:overScrollMode="never"
             android:textAlignment="center"
-            android:layout_marginStart="40dp"
-            android:layout_marginEnd="40dp">
+            android:layout_marginStart="30dp"
+            android:layout_marginEnd="30dp" />
 
-    </androidx.viewpager2.widget.ViewPager2>
-
-    <Button
+    <ImageButton
             android:id="@+id/btnPrev"
-            android:layout_width="11dp"
-            android:layout_height="31dp"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
             style="@style/classic_button_style"
-            android:background="@drawable/arrow"
+            android:src="@drawable/arrow"
             android:rotationY="180"
             android:contentDescription="@string/previous_cards"
             tools:ignore="RtlSymmetry,TouchTargetSizeCheck"
-            android:paddingEnd="12dp"
-            app:layout_constraintEnd_toStartOf="@+id/imagePager"
             app:layout_constraintTop_toTopOf="@+id/imagePager"
             app:layout_constraintBottom_toBottomOf="@+id/imagePager"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="2dp" />
+            android:background="@null"
+            app:layout_constraintEnd_toStartOf="@+id/imagePager"
+            android:layout_marginStart="5dp" />
 
     <LinearLayout
             android:id="@+id/dotsLayout"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:gravity="center"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
             android:layout_marginTop="20dp"
             app:layout_constraintTop_toBottomOf="@+id/imagePager" />
 
-    <Button
+    <ImageButton
             android:id="@+id/btnNext"
-            android:layout_width="11dp"
-            android:layout_height="31dp"
-            android:background="@drawable/arrow"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:src="@drawable/arrow"
             android:contentDescription="@string/next_cards"
             tools:ignore="TouchTargetSizeCheck"
-            app:layout_constraintStart_toEndOf="@+id/imagePager"
             app:layout_constraintTop_toTopOf="@+id/imagePager"
             app:layout_constraintBottom_toBottomOf="@+id/imagePager"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="2dp"
             style="@style/classic_button_style"
-            android:clickable="true" />
+            android:clickable="true"
+            android:background="@null"
+            android:minWidth="5dip"
+            android:minHeight="5dip"
+            app:layout_constraintStart_toEndOf="@+id/imagePager"
+            android:layout_marginEnd="5dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
