--- a/app/src/main/res/layout/item_user_list.xml
+++ b/app/src/main/res/layout/item_user_list.xml
@@ -12,14 +12,14 @@
             android:textAppearance="@style/list_member_name"
             android:textAlignment="center"
             android:autoSizeTextType="uniform"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:id="@+id/name"
             app:layout_constraintStart_toEndOf="@+id/avatar"
             android:layout_marginStart="10dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:maxWidth="185dp"
+            app:layout_constraintWidth_max="185dp"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="50dp" />
 
