--- a/app/src/main/res/layout/network_dialog.xml
+++ b/app/src/main/res/layout/network_dialog.xml
@@ -7,16 +7,20 @@
         android:background="@drawable/dialog_background">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent">
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginBottom="20dp">
 
         <TextView
                 android:text="@string/network_text"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:id="@+id/textView"
                 app:layout_constraintTop_toBottomOf="@+id/wifi"
@@ -28,7 +32,7 @@
 
         <TextView
                 android:text="@string/network_down_text"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 app:layout_constraintTop_toBottomOf="@+id/textView"
                 android:layout_marginTop="16dp"
