--- a/app/src/main/res/layout/upload_photo_dialog.xml
+++ b/app/src/main/res/layout/upload_photo_dialog.xml
@@ -21,7 +21,7 @@
 
     <TextView
             android:id="@+id/upload_text"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="@string/upload_text"
             android:textAppearance="@style/reload_text"
@@ -37,7 +37,7 @@
 
     <TextView
             android:id="@+id/upload_desc"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="@string/upload_desc"
             android:textAppearance="@style/dialog_desc"
@@ -53,7 +53,7 @@
 
     <ImageView
             android:id="@+id/separator"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:src="@drawable/separator"
             android:contentDescription="@string/separator"
@@ -62,6 +62,15 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
+    <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="164dp"
+            android:layout_height="164dp"
+            android:background="@drawable/photo_circle"
+            app:layout_constraintEnd_toEndOf="@+id/photo"
+            app:layout_constraintStart_toStartOf="@+id/photo"
+            app:layout_constraintTop_toTopOf="@+id/photo"
+            app:layout_constraintBottom_toBottomOf="@+id/photo" />
+
     <com.google.android.material.imageview.ShapeableImageView
             android:background="@drawable/photo_filler"
             android:layout_width="160dp"
@@ -69,11 +78,11 @@
             android:id="@+id/photo"
             android:scaleType="centerCrop"
             app:shapeAppearanceOverlay="@style/rounded_image_view"
-            app:strokeColor="@color/blue"
+            app:strokeColor="@color/white"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:contentDescription="@string/avatar"
-            android:layout_marginTop="22dp"
+            android:layout_marginTop="25dp"
             android:layout_marginStart="152dp"
             android:layout_marginEnd="152dp"
             app:strokeWidth="3dp"
@@ -99,7 +108,9 @@
             android:paddingVertical="6dp"
             tools:ignore="TouchTargetSizeCheck"
             app:layout_constraintTop_toBottomOf="@id/photo"
-            android:layout_marginTop="22dp" />
+            android:layout_marginTop="25dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp" />
 
     <LinearLayout
             android:baselineAligned="false"
