--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -105,7 +105,7 @@
     <style name="bio_text">
         <item name="android:textSize">16sp</item>
         <item name="android:letterSpacing">0.04</item>
-        <item name="android:fontFamily">@font/montserrat_regular</item>
+        <item name="android:fontFamily">@font/montserrat_medium</item>
         <item name="android:textColor">@color/black</item>
     </style>
 
