--- a/app/src/main/res/layout/item_carousel.xml
+++ b/app/src/main/res/layout/item_carousel.xml
@@ -6,15 +6,13 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="35dp">
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/teamLayout"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:gravity="center"
             android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp">
 
@@ -25,7 +23,11 @@
                 android:layout_height="wrap_content"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                android:textAlignment="textStart" />
+                android:textAlignment="center"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginEnd="66dp"
+                app:layout_constrainedWidth="true" />
 
         <Button
                 android:layout_width="20dp"
@@ -35,11 +37,11 @@
                 android:background="@drawable/edit_icon"
                 style="@style/orange_button_style"
                 tools:ignore="TouchTargetSizeCheck"
-                app:layout_constraintStart_toEndOf="@+id/teamName"
-                android:layout_marginStart="16dp"
                 app:layout_constraintTop_toTopOf="@+id/teamName"
                 app:layout_constraintBottom_toBottomOf="@+id/teamName"
-                android:visibility="gone" />
+                android:visibility="visible"
+                app:layout_constraintStart_toEndOf="@+id/teamName"
+                android:layout_marginStart="16dp" />
 
         <Button
                 android:layout_width="20dp"
@@ -49,12 +51,12 @@
                 android:background="@drawable/delete_photo_icon"
                 style="@style/orange_button_style"
                 tools:ignore="TouchTargetSizeCheck"
-                app:layout_constraintStart_toEndOf="@+id/editTeam"
-                android:layout_marginStart="10dp"
                 app:layout_constraintTop_toTopOf="@+id/editTeam"
                 app:layout_constraintBottom_toBottomOf="@+id/editTeam"
-                android:visibility="gone" />
-    </LinearLayout>
+                android:visibility="visible"
+                app:layout_constraintStart_toEndOf="@+id/editTeam"
+                android:layout_marginStart="10dp" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.viewpager2.widget.ViewPager2
             android:id="@+id/imagePager"
