--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,4 +1,5 @@
 <resources>
+
     <style name="Theme.YUTA" parent="Theme.MaterialComponents.Light.NoActionBar">
         <item name="colorPrimary">@color/orange</item>
         <item name="colorOnPrimary">@color/white</item>
@@ -6,6 +7,10 @@
         <item name="colorOnSecondary">@color/white</item>
         <item name="android:statusBarColor">?attr/colorSecondary</item>
         <item name="android:navigationBarColor">?attr/colorSecondary</item>
+        <item name="enterAnim">@anim/nav_default_enter_anim</item>
+        <item name="exitAnim">@anim/nav_default_exit_anim</item>
+        <item name="popEnterAnim">@anim/nav_default_pop_enter_anim</item>
+        <item name="popExitAnim">@anim/nav_default_pop_exit_anim</item>
     </style>
 
     <style name="Theme.YUTA.GradientStatusBar" parent="Theme.YUTA">
