--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -188,7 +188,8 @@
                 android:textAlignment="center"
                 tools:ignore="TouchTargetSizeCheck"
                 app:layout_constraintVertical_bias="1.0"
-                android:textSize="16sp" />
+                android:textSize="16sp"
+                android:enabled="false" />
 
         <TextView
                 android:id="@+id/error_text"
