--- a/app/src/main/res/layout/update_user_dialog.xml
+++ b/app/src/main/res/layout/update_user_dialog.xml
@@ -126,7 +126,8 @@
             tools:ignore="TouchTargetSizeCheck"
             android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp"
-            app:layout_constraintVertical_bias="0.0" />
+            app:layout_constraintVertical_bias="0.0"
+            android:enabled="false" />
 
     <TextView
             android:id="@+id/error_text"
