Correct validation for text fields

--- a/app/src/main/res/layout/item_carousel.xml
+++ b/app/src/main/res/layout/item_carousel.xml
@@ -8,13 +8,14 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/teamLayout"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginStart="20dp"
-            android:layout_marginEnd="20dp">
+            android:layout_marginEnd="20dp"
+            app:layout_constrainedWidth="true">
 
         <TextView
                 android:id="@+id/teamName"
@@ -26,8 +27,8 @@
                 android:textAlignment="center"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginEnd="66dp"
-                app:layout_constrainedWidth="true" />
+                app:layout_constrainedWidth="true"
+                app:layout_constraintHorizontal_bias="0.0" />
 
         <Button
                 android:layout_width="20dp"
@@ -39,7 +40,6 @@
                 tools:ignore="TouchTargetSizeCheck"
                 app:layout_constraintTop_toTopOf="@+id/teamName"
                 app:layout_constraintBottom_toBottomOf="@+id/teamName"
-                android:visibility="visible"
                 app:layout_constraintStart_toEndOf="@+id/teamName"
                 android:layout_marginStart="16dp" />
 
@@ -53,7 +53,6 @@
                 tools:ignore="TouchTargetSizeCheck"
                 app:layout_constraintTop_toTopOf="@+id/editTeam"
                 app:layout_constraintBottom_toBottomOf="@+id/editTeam"
-                android:visibility="visible"
                 app:layout_constraintStart_toEndOf="@+id/editTeam"
                 android:layout_marginStart="10dp" />
     </androidx.constraintlayout.widget.ConstraintLayout>
