--- a/app/src/main/res/layout/create_team_dialog.xml
+++ b/app/src/main/res/layout/create_team_dialog.xml
@@ -33,7 +33,7 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/separator"
-                    android:layout_marginTop="20dp"
+                    android:layout_marginTop="25dp"
                     android:layout_marginStart="24dp"
                     android:layout_marginEnd="24dp" />
 
@@ -51,7 +51,8 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     android:layout_marginEnd="25dp"
-                    android:layout_marginStart="25dp" />
+                    android:layout_marginStart="25dp"
+                    android:visibility="gone" />
 
             <TextView
                     android:id="@+id/find_desc"
@@ -63,7 +64,7 @@
                     android:fontFamily="@font/montserrat_medium"
                     android:autoSizeTextType="uniform"
                     app:layout_constraintTop_toBottomOf="@+id/addedMembers"
-                    android:layout_marginTop="25dp"
+                    android:layout_marginTop="15dp"
                     app:layout_constraintStart_toStartOf="parent"
                     android:layout_marginStart="25dp"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -83,7 +84,7 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     android:layout_marginStart="20dp"
                     android:layout_marginEnd="20dp"
-                    android:layout_marginTop="50dp" />
+                    android:layout_marginTop="45dp" />
 
             <ImageView
                     android:id="@+id/separator"
@@ -216,15 +217,15 @@
                     android:text="@string/error_team_message"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:textAppearance="@style/error_team_message"
+                    android:textAppearance="@style/error_field_message"
                     android:textAlignment="textStart"
                     app:layout_constraintTop_toBottomOf="@id/team_name"
                     android:layout_marginTop="3dp"
-                    app:layout_constraintStart_toStartOf="parent"
-                    android:layout_marginStart="20dp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    android:layout_marginEnd="20dp"
-                    android:visibility="gone" />
+                    app:layout_constraintStart_toStartOf="@+id/team_name"
+                    app:layout_constraintEnd_toEndOf="@+id/team_name"
+                    android:layout_marginEnd="10dp"
+                    android:visibility="gone"
+                    android:layout_marginStart="10dp" />
 
             <TextView
                     android:id="@+id/empty_search_text"
