--- a/app/src/main/res/layout/item_user_list.xml
+++ b/app/src/main/res/layout/item_user_list.xml
@@ -5,7 +5,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/edit_field_background"
-        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
         android:padding="8dp">
 
     <TextView
