--- a/app/src/main/res/layout/update_user_dialog.xml
+++ b/app/src/main/res/layout/update_user_dialog.xml
@@ -117,7 +117,7 @@
             app:drawableLeftCompat="@drawable/reload_button_icon"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/error_text"
+            app:layout_constraintTop_toBottomOf="@id/password_field"
             android:layout_marginTop="28dp"
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginBottom="22dp"
@@ -126,7 +126,7 @@
             tools:ignore="TouchTargetSizeCheck"
             android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp"
-            app:layout_constraintVertical_bias="0.0"
+            app:layout_constraintVertical_bias="1.0"
             android:enabled="false" />
 
     <TextView
@@ -139,9 +139,11 @@
             android:textAlignment="center"
             app:layout_constraintTop_toBottomOf="@id/password_field"
             app:layout_constraintStart_toStartOf="@+id/password_field"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="8dp"
             android:layout_marginStart="10dp"
             android:layout_marginEnd="10dp"
-            app:layout_constraintEnd_toEndOf="@id/password_field" />
+            app:layout_constraintEnd_toEndOf="@id/password_field"
+            app:layout_constraintBottom_toTopOf="@+id/submit"
+            android:layout_marginBottom="16dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
