--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -41,12 +41,6 @@
         <item name="android:textColor">@color/white</item>
     </style>
 
-    <style name="error_message">
-        <item name="android:fontFamily">@font/montserrat_semibold</item>
-        <item name="android:textSize">16sp</item>
-        <item name="android:textColor">#FF0000</item>
-    </style>
-
     <style name="loading">
         <item name="android:fontFamily">@font/montserrat_regular</item>
         <item name="android:textSize">18sp</item>
@@ -199,10 +193,16 @@
         <item name="android:textColor">@color/blue</item>
     </style>
 
-    <style name="error_team_message" >
+    <style name="error_field_message" >
         <item name="android:fontFamily">@font/montserrat_medium</item>
         <item name="android:textSize">12sp</item>
-        <item name="android:letterSpacing">0.12</item>
+        <item name="android:letterSpacing">0.08</item>
+        <item name="android:textColor">#E6DF2121</item>
+    </style>
+
+    <style name="error_message" >
+        <item name="android:fontFamily">@font/montserrat_semibold</item>
+        <item name="android:textSize">16sp</item>
         <item name="android:textColor">#E6DF2121</item>
     </style>
 
