Correct saving teams switch position

--- a/app/src/main/res/layout/fragment_teams.xml
+++ b/app/src/main/res/layout/fragment_teams.xml
@@ -148,7 +148,7 @@
             android:focusableInTouchMode="true"
             android:background="@drawable/scrollview_background"
             android:animateLayoutChanges="true"
-            android:visibility="visible"
+            android:visibility="gone"
             android:id="@+id/progressLayout"
             android:layout_width="0dp"
             android:layout_height="0dp"
