--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -166,13 +166,9 @@
 
         <Button
                 android:id="@+id/login_button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
                 android:layout_marginTop="30dp"
                 android:text="@string/login_button"
-                android:textAppearance="@style/login_button"
-                android:background="@drawable/login_button"
-                style="@style/orange_button_style"
+                style="@style/orange_button"
                 android:elevation="5dp"
                 android:layout_below="@+id/password_field"
                 android:layout_centerHorizontal="true"
@@ -181,11 +177,6 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 android:layout_marginBottom="8dp"
-                android:paddingHorizontal="40dp"
-                android:paddingVertical="5dp"
-                android:autoSizeTextType="uniform"
-                android:minHeight="30dp"
-                android:textAlignment="center"
                 tools:ignore="TouchTargetSizeCheck"
                 app:layout_constraintVertical_bias="1.0"
                 android:textSize="16sp"
