--- a/app/src/main/res/layout/create_team_dialog.xml
+++ b/app/src/main/res/layout/create_team_dialog.xml
@@ -162,28 +162,17 @@
                     android:minHeight="35dip"
                     android:enabled="false"
                     android:clickable="true"
-                    style="@style/blue_button_style" />
+                    style="@style/blue_button" />
 
             <Button
                     android:id="@+id/submit"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/login_button"
-                    style="@style/orange_button_style"
-                    android:textAppearance="@style/pick_button"
+                    style="@style/orange_button"
                     android:text="@string/create_team_button"
-                    android:textAlignment="center"
-                    android:fontFamily="@font/montserrat_bold"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    android:paddingHorizontal="45dp"
-                    android:paddingVertical="8dp"
                     tools:ignore="TouchTargetSizeCheck"
-                    android:autoSizeTextType="uniform"
                     app:layout_constraintTop_toBottomOf="@+id/searchUsers"
                     android:layout_marginTop="25dp"
-                    android:minWidth="120dip"
-                    android:minHeight="35dip"
                     android:enabled="false"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintVertical_bias="1.0" />
