--- a/app/src/main/res/layout/edit_user_dialog.xml
+++ b/app/src/main/res/layout/edit_user_dialog.xml
@@ -145,28 +145,18 @@
 
     <Button
             android:id="@+id/submit"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/login_button"
-            style="@style/orange_button_style"
-            android:textAppearance="@style/reload_button"
+            style="@style/orange_button"
             android:text="@string/edit_button"
-            android:textAlignment="center"
-            android:fontFamily="@font/montserrat_bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginBottom="22dp"
-            android:paddingHorizontal="36dp"
-            android:paddingVertical="5dp"
             tools:ignore="TouchTargetSizeCheck"
             app:layout_constraintTop_toBottomOf="@+id/vk"
             android:layout_marginTop="30dp"
             android:layout_marginStart="40dp"
             android:layout_marginEnd="40dp"
-            android:autoSizeTextType="uniform"
-            app:layout_constraintVertical_bias="1.0"
-            android:minHeight="45dip" />
+            app:layout_constraintVertical_bias="1.0" />
 
     <TextView
             android:id="@+id/error_phone"
