--- a/app/src/main/res/layout/update_user_dialog.xml
+++ b/app/src/main/res/layout/update_user_dialog.xml
@@ -104,15 +104,9 @@
 
     <Button
             android:id="@+id/submit"
-            android:layout_width="wrap_content"
-            android:layout_height="45dp"
-            android:background="@drawable/login_button"
-            style="@style/orange_button_style"
-            android:textAppearance="@style/reload_button"
+            style="@style/orange_button"
             android:text="@string/reload_button"
             android:textAlignment="textStart"
-            android:fontFamily="@font/montserrat_bold"
-            android:autoSizeTextType="uniform"
             android:drawablePadding="10dp"
             app:drawableLeftCompat="@drawable/reload_button_icon"
             app:layout_constraintEnd_toEndOf="parent"
@@ -121,8 +115,6 @@
             android:layout_marginTop="28dp"
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginBottom="22dp"
-            android:paddingHorizontal="30dp"
-            android:paddingVertical="5dp"
             tools:ignore="TouchTargetSizeCheck"
             android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp"
