--- a/app/src/main/res/layout/upload_photo_dialog.xml
+++ b/app/src/main/res/layout/upload_photo_dialog.xml
@@ -91,26 +91,17 @@
 
     <Button
             android:id="@+id/pick_miniature"
-            android:layout_width="wrap_content"
-            android:layout_height="45dp"
-            android:background="@drawable/login_button"
-            style="@style/orange_button_style"
-            android:textAppearance="@style/reload_button"
+            style="@style/orange_button"
             android:text="@string/miniature_button"
-            android:textAlignment="textStart"
-            android:fontFamily="@font/montserrat_bold"
-            android:autoSizeTextType="uniform"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginBottom="22dp"
-            android:paddingHorizontal="35dp"
-            android:paddingVertical="6dp"
-            tools:ignore="TouchTargetSizeCheck"
             app:layout_constraintTop_toBottomOf="@id/photo"
             android:layout_marginTop="25dp"
             android:layout_marginStart="20dp"
-            android:layout_marginEnd="20dp" />
+            android:layout_marginEnd="20dp"
+            tools:ignore="TouchTargetSizeCheck" />
 
     <LinearLayout
             android:baselineAligned="false"
