--- a/app/src/main/res/layout/fragment_teams.xml
+++ b/app/src/main/res/layout/fragment_teams.xml
@@ -32,6 +32,19 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
+            <Button
+                    android:layout_width="22dp"
+                    android:layout_height="22dp"
+                    android:id="@+id/log_out"
+                    android:contentDescription="@string/exit_button"
+                    android:background="@drawable/exit_icon"
+                    style="@style/classic_button_style"
+                    tools:ignore="TouchTargetSizeCheck"
+                    android:layout_marginTop="20dp"
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:layout_marginEnd="20dp"
+                    app:layout_constraintEnd_toEndOf="parent" />
+
             <androidx.constraintlayout.widget.ConstraintLayout
                     android:id="@+id/scroll_container"
                     android:layout_width="match_parent"
