--- a/app/src/main/res/layout/delete_dialog.xml
+++ b/app/src/main/res/layout/delete_dialog.xml
@@ -68,7 +68,7 @@
             android:text="@string/delete_button"
             android:textAlignment="textStart"
             android:drawablePadding="10dp"
-            app:drawableLeftCompat="@drawable/delete_photo_icon"
+            app:drawableLeftCompat="@drawable/delete_icon"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
