--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -138,7 +138,7 @@
         <item name="android:textColor">@color/dark_gray</item>
     </style>
 
-    <style name="photo_dialog_item">
+    <style name="drop_dialog_item">
         <item name="android:fontFamily">@font/montserrat_medium</item>
         <item name="android:textSize">18sp</item>
         <item name="android:letterSpacing">0.12</item>
@@ -223,6 +223,13 @@
         <item name="android:textColor">@color/white</item>
     </style>
 
+    <style name="project_parameter_header">
+        <item name="android:fontFamily">@font/montserrat_semibold</item>
+        <item name="android:textSize">12sp</item>
+        <item name="android:letterSpacing">0.05</item>
+        <item name="android:textColor">@color/dark_gray</item>
+    </style>
+
     <style name="orange_button" parent="Widget.MaterialComponents.Button.UnelevatedButton">
         <item name="backgroundTint">@color/orange_button</item>
         <item name="android:layout_width">wrap_content</item>
@@ -246,5 +253,12 @@
         <item name="android:letterSpacing">0.05</item>
         <item name="android:textColor">@color/white</item>
         <item name="android:textAllCaps">false</item>
+    </style>
+
+    <style name="team_text">
+        <item name="android:fontFamily">@font/montserrat_semibold</item>
+        <item name="android:textSize">11sp</item>
+        <item name="android:letterSpacing">0.02</item>
+        <item name="android:textColor">@color/dark_gray</item>
     </style>
 </resources>
