--- a/app/src/main/res/layout/item_team_search.xml
+++ b/app/src/main/res/layout/item_team_search.xml
@@ -6,7 +6,7 @@
         android:layout_height="wrap_content"
         android:background="@drawable/edit_field_background"
         android:layout_marginBottom="10dp"
-        android:padding="8dp">
+        android:padding="18dp">
 
     <TextView
             android:textAppearance="@style/list_member_name"
@@ -15,29 +15,17 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:id="@+id/name"
-            app:layout_constraintStart_toEndOf="@+id/avatar"
-            android:layout_marginStart="10dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintWidth_max="185dp"
+            app:layout_constrainedWidth="true"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="50dp" />
-
-    <com.google.android.material.imageview.ShapeableImageView
-            android:background="@drawable/photo_filler"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:id="@+id/avatar"
-            android:scaleType="centerCrop"
-            app:shapeAppearanceOverlay="@style/rounded_image_view"
-            android:contentDescription="@string/avatar"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            android:layout_marginEnd="50dp"
+            app:layout_constraintStart_toStartOf="parent"
+            android:textSize="15sp" />
 
     <Button
-            android:id="@+id/btnAdd"
-            android:contentDescription="@string/add_team_member"
+            android:id="@+id/add_team"
+            android:contentDescription="@string/add_team"
             android:layout_width="28dp"
             android:layout_height="28dp"
             style="@style/orange_button_style"
@@ -49,8 +37,8 @@
             android:layout_marginEnd="10dp" />
 
     <Button
-            android:id="@+id/btnRemove"
-            android:contentDescription="@string/remove_team_member"
+            android:id="@+id/remove_team"
+            android:contentDescription="@string/remove_team"
             android:layout_width="28dp"
             android:layout_height="28dp"
             style="@style/orange_button_style"
