--- a/app/src/main/res/layout/item_user_search.xml
+++ b/app/src/main/res/layout/item_user_search.xml
@@ -19,7 +19,7 @@
             android:layout_marginStart="10dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintWidth_max="185dp"
+            app:layout_constrainedWidth="true"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="50dp" />
 
