--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -29,7 +29,7 @@
 
     <style name="login">
         <item name="android:fontFamily">@font/montserrat_regular</item>
-        <item name="android:textSize">18sp</item>
+        <item name="android:textSize">15sp</item>
         <item name="android:textColor">#73000000</item>
         <item name="android:textColorHint">#73000000</item>
     </style>
@@ -134,7 +134,7 @@
     <style name="dialog_desc">
         <item name="android:fontFamily">@font/montserrat_medium</item>
         <item name="android:textSize">15sp</item>
-        <item name="android:letterSpacing">0.1</item>
+        <item name="android:letterSpacing">0.12</item>
         <item name="android:textColor">@color/dark_gray</item>
     </style>
 
@@ -150,6 +150,11 @@
         <item name="android:letterSpacing">0.12</item>
         <item name="android:textColor">@color/white</item>
         <item name="android:textSize">13sp</item>
+    </style>
+
+    <style name="pick_file_button" parent="pick_button">
+        <item name="android:textColor">@color/dark_gray</item>
+        <item name="android:fontFamily">@font/montserrat_medium</item>
     </style>
 
     <style name="active_toggle" parent="Widget.AppCompat.Button.Borderless">
@@ -260,5 +265,17 @@
         <item name="android:textSize">11sp</item>
         <item name="android:letterSpacing">0.02</item>
         <item name="android:textColor">@color/dark_gray</item>
+    </style>
+
+    <style name="dialog_field_desc">
+        <item name="android:fontFamily">@font/montserrat_medium</item>
+        <item name="android:textSize">11sp</item>
+        <item name="android:letterSpacing">0.12</item>
+        <item name="android:textColor">@color/dark_gray</item>
+    </style>
+
+    <style name="radio_button">
+        <item name="colorControlNormal">@color/dark_gray</item>
+        <item name="colorControlActivated">@color/blue</item>
     </style>
 </resources>
